--- a/style.css
+++ b/style.css
@@ -1,14 +1,72 @@
-.block{
-	width: 200px;
-	height: 45px;
+  body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
 }
-.number{
-	width: 45px;
-	height: 45px;
+
+#input {
+  border-bottom: 1px solid gray;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 0 20px;
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+    align-items: flex-end;
+    font-size: 75px;
+    font-family: sans-serif;
 }
-.top{
-	width: 100px;
+
+.input-block {
+  height: 50%;
+  width: 100%;
 }
-input{
-	width: 180px;
+
+.block {
+  display: flex;
+}
+
+.number {
+  width: 45%;
+  height: 45%;
+  margin: 4px;
+}
+
+.number, .numberC, .numberDel {
+  border: none;
+  background-color: #2c3e50;
+    color: #ecf0f1;
+    cursor: pointer;
+  font-weight: bold;
+  border-radius: 5px;
+  outline: none !important;
+  font-family: sans-serif;
+  font-size: 75px;
+  padding: 5%;
+}
+
+.top-left, .top-right {
+  width: 50%;
+  margin: 4px;
+}
+
+.inner-numbers {
+  position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.calc {
+  width: 100%;
+  height: 100%;
+}
+
+.numbers {
+  width: 100%;
+  height: 50%;
 }
