--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
 }
 
 .input-block {
-  height: 50%;
-  width: 100%;
+  height: 900px;
+  max-width: 980px;
 }
 
 .block {
@@ -68,5 +68,17 @@
 
 .numbers {
   width: 100%;
-  height: 50%;
+  height: 950px;
+}
+hr{
+	width: 50px;
+	background-color: black;
+	margin-top: 17px;
+	margin-bottom: 0;
+	background-color: #2c3e50;
+}
+#hr{
+	position: absolute;
+	top: 30px;	
+	right: 30px;
 }
